--- a/css/style.css
+++ b/css/style.css
@@ -3,36 +3,56 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Work Sans', sans-serif;
+  background: #000;
+}
+
+.loader {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+}
+
+.loader span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #2d3436;
+  font-size: 15vw;
 }
 
 .delay-1 {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
 
 .delay-2 {
-  -webkit-animation-delay: 1.1s;
-          animation-delay: 1.1s;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
 }
 
 .delay-3 {
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
 .delay-4 {
-  -webkit-animation-delay: 1.3s;
-          animation-delay: 1.3s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 
 .delay-5 {
-  -webkit-animation-delay: 1.4s;
-          animation-delay: 1.4s;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
 }
 
 .delay-6 {
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 header {
@@ -43,11 +63,11 @@ header {
 }
 
 header .background {
-  background: url("../img/mountain-984083_1920.jpg");
+  background: url("../img/mountain-984083_1920-min.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  -webkit-animation: animateBg forwards 0.9s ease-in-out;
-          animation: animateBg forwards 0.9s ease-in-out;
+  -webkit-animation: animateBg forwards 0.9s cubic-bezier(0.59, 0.11, 0.04, 0.99);
+          animation: animateBg forwards 0.9s cubic-bezier(0.59, 0.11, 0.04, 0.99);
   position: absolute;
   height: 100vh;
   width: 100%;
@@ -84,11 +104,11 @@ header .blur {
 
 header .blur .bg {
   height: 100vh;
-  background: url("../img/mountain-984083_1920.jpg");
+  background: url("../img/mountain-984083_1920-min.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  -webkit-animation: animateBg forwards 0.9s ease-in-out;
-          animation: animateBg forwards 0.9s ease-in-out;
+  -webkit-animation: animateBg forwards 0.9s cubic-bezier(0.59, 0.11, 0.04, 0.99);
+          animation: animateBg forwards 0.9s cubic-bezier(0.59, 0.11, 0.04, 0.99);
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -134,6 +154,15 @@ header .blur .content .btn:hover span {
   transition: all 900ms;
 }
 
+header .blur .content .btn:hover i {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition: -webkit-transform 300ms;
+  transition: -webkit-transform 300ms;
+  transition: transform 300ms;
+  transition: transform 300ms, -webkit-transform 300ms;
+}
+
 header .blur .content .btn:hover:before {
   left: 0;
   -webkit-transition: all 600ms cubic-bezier(0.66, 0.01, 0.19, 1);
@@ -162,11 +191,246 @@ header .blur .content .btn span {
   letter-spacing: 1px;
   -webkit-transition: all 900ms;
   transition: all 900ms;
+  line-height: 2.3em;
+}
+
+header .blur .content .btn i {
+  -webkit-transition: -webkit-transform 300ms;
+  transition: -webkit-transform 300ms;
+  transition: transform 300ms;
+  transition: transform 300ms, -webkit-transform 300ms;
 }
 
 main {
   min-height: 100vh;
+  width: 100%;
+  background: #FFF;
+}
+
+main .row {
+  height: 90vh;
+  width: 100%;
+  margin: 0;
+  padding: 10vh 16px 10vh 16px;
+}
+
+@media (max-width: 1200px) {
+  main .row {
+    height: 60vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
+}
+
+main .row .content {
+  width: 100%;
+  height: 70vh;
   position: relative;
+}
+
+@media (max-width: 1200px) {
+  main .row .content {
+    height: 50vh;
+  }
+}
+
+main .row .content .img-overlay {
+  overflow: hidden;
+  max-height: 70vh;
+}
+
+@media (max-width: 1200px) {
+  main .row .content .img-overlay {
+    height: 50vh;
+  }
+}
+
+main .row .content img {
+  max-width: 100%;
+  -webkit-animation: imgzoom forwards 3s ease-in-out;
+          animation: imgzoom forwards 3s ease-in-out;
+}
+
+main .row .content .info, main .row .content .info-1 {
+  position: absolute;
+  top: 30%;
+  right: -15%;
+  width: 25vw;
+  height: 40vh;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 5%;
+  overflow: hidden;
+}
+
+@media (max-width: 1200px) {
+  main .row .content .info, main .row .content .info-1 {
+    top: 0;
+    right: 10%;
+    width: 30vw;
+  }
+}
+
+@media (max-width: 768px) {
+  main .row .content .info, main .row .content .info-1 {
+    height: 40%;
+  }
+}
+
+main .row .content .info .overlay, main .row .content .info-1 .overlay {
+  position: absolute;
+  top: 0;
+  left: -102%;
+  width: 102%;
+  height: 100%;
+  background: #FFF;
+}
+
+main .row .content .info h1, main .row .content .info p, main .row .content .info a, main .row .content .info-1 h1, main .row .content .info-1 p, main .row .content .info-1 a {
+  color: #FFF;
+  margin-bottom: 10%;
+}
+
+@media (max-width: 768px) {
+  main .row .content .info h1, main .row .content .info-1 h1 {
+    font-size: 3vw;
+  }
+}
+
+@media (max-width: 768px) {
+  main .row .content .info p, main .row .content .info a, main .row .content .info-1 p, main .row .content .info-1 a {
+    font-size: 1.5vw;
+  }
+}
+
+main .row .content .info a, main .row .content .info-1 a {
+  position: relative;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+main .row .content .info a:before, main .row .content .info-1 a:before {
+  content: '';
+  position: absolute;
+  left: -35%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  height: 1px;
+  width: 30px;
+  background: #fff;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+main .row .content .info a:hover, main .row .content .info-1 a:hover {
+  text-decoration: none;
+  margin-right: 15px;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+main .row .content .info a:hover:before, main .row .content .info-1 a:hover:before {
+  width: 40px;
+  left: -45%;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+main .row .content .info-1 {
+  left: -17% !important;
+}
+
+@media (max-width: 1200px) {
+  main .row .content .info-1 {
+    left: 10% !important;
+  }
+}
+
+main .discover {
+  background: #ecf0f1;
+}
+
+main .contact {
+  height: 80vh;
+  background: #fff;
+  position: relative;
+  padding-top: 10vh;
+  padding-bottom: 20vh;
+}
+
+main .contact .hline {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: #c3c3c3;
+}
+
+main .contact .form {
+  height: 100%;
+  background: #ecf0f1;
+  box-shadow: 0px 4px 25px -2px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 4px 25px -2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 4px 25px -2px rgba(0, 0, 0, 0.75);
+  position: relative;
+}
+
+main .contact .form .wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+main .contact .form .wrap .form-control {
+  border-radius: 0;
+  height: 70px;
+}
+
+main .contact .form .wrap .btn {
+  border-radius: 0;
+  width: 100%;
+}
+
+footer {
+  height: 80vh;
+  background: #2c3e50;
+  padding-top: 20vh;
+  position: relative;
+}
+
+footer .row {
+  width: 100%;
+}
+
+footer .col-xl-3 {
+  min-height: 100%;
+}
+
+footer h1, footer h6 {
+  color: #FFF;
+}
+
+footer p, footer a {
+  color: #7f8c8d;
+  font-size: .9rem;
+}
+
+footer a:hover {
+  color: #22a6b3;
+}
+
+footer .copyright {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
 }
 
 @-webkit-keyframes animateBg {
@@ -188,6 +452,28 @@ main {
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+}
+
+@-webkit-keyframes animateImg {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+@keyframes animateImg {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
   }
 }
 
@@ -240,6 +526,78 @@ main {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 20px, 0);
+            transform: translate3d(0, 20px, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 20px, 0);
+            transform: translate3d(0, 20px, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes imgzoom {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+
+@keyframes imgzoom {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
 /*# sourceMappingURL=style.css.map */
