--- a/css/style.scss
+++ b/css/style.scss
@@ -3,24 +3,50 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+    background: #000;
+}
+@mixin for-size($size){
+    @if $size == desktop-sm {
+        @media (max-width: 1200px){@content;}
+    } @else if $size == tablet {
+        @media (max-width: 768px){@content;}
+    } @else if $size == mobile {
+        @media (max-width: 500px){@content;}
+    }
+}
+.loader {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+        span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #2d3436;
+            font-size: 15vw;
+        }
 }
 .delay-1 {
-    animation-delay: 1s;
+    animation-delay: 0.3s;
 }
 .delay-2 {
-    animation-delay: 1.1s;
+    animation-delay: 0.4s;
 }
 .delay-3 {
-    animation-delay: 1.2s;
+    animation-delay: 0.5s;
 }
 .delay-4 {
-    animation-delay: 1.3s;
+    animation-delay: 0.6s;
 }
 .delay-5 {
-    animation-delay: 1.4s;
+    animation-delay: 0.7s;
 }
 .delay-6 {
-    animation-delay: 1.5s;
+    animation-delay: 0.8s;
 }
 header {
     height: 100vh;
@@ -28,10 +54,10 @@ header {
     overflow: hidden;
     position: relative;
         .background {
-            background: url("../img/mountain-984083_1920.jpg");
+            background: url("../img/mountain-984083_1920-min.jpg");
             background-size: cover;
             background-position: 50% 50%;
-            animation: animateBg forwards 0.9s ease-in-out;
+            animation: animateBg forwards 0.9s cubic-bezier(.59,.11,.04,.99);
             position: absolute;
             height: 100vh;
             width: 100%;
@@ -62,10 +88,10 @@ header {
             width: 100%;
             .bg {
                 height: 100vh;
-                background: url("../img/mountain-984083_1920.jpg");
+                background: url("../img/mountain-984083_1920-min.jpg");
                 background-size: cover;
                 background-position: 50% 50%;
-                animation: animateBg forwards 0.9s ease-in-out;
+                animation: animateBg forwards 0.9s cubic-bezier(.59,.11,.04,.99);
                 position: absolute;
                 height: 100vh;
                 width: 100vw;
@@ -102,6 +128,10 @@ header {
                             color: #FFF;
                             transition: all 900ms;
                         }
+                        &:hover i {
+                            transform: rotate(90deg);
+                            transition: transform 300ms;
+                        }
                         &:hover:before{
                             left: 0;
                             transition: all 600ms cubic-bezier(0.66, 0.01, 0.19, 1);
@@ -124,6 +154,10 @@ header {
                                 font-weight: 700;
                                 letter-spacing: 1px;
                                 transition: all 900ms;
+                                line-height: 2.3em;
+                            }
+                            i {
+                                transition: transform 300ms;
                             }
                     }
             }
@@ -133,10 +167,185 @@ header {
 }
 main {
     min-height: 100vh;
-    position: relative;
+    width: 100%;
+    background: #FFF;
+        .row {
+            height: 90vh;
+            width: 100%;
+            margin: 0;
+            padding: 10vh 16px 10vh 16px;
+                @include for-size(desktop-sm) {
+                    height: 60vh;
+                    padding-top: 5vh;
+                    padding-bottom: 5vh;
+                }
+                .content {
+                    width: 100%;
+                    height: 70vh;
+                    position: relative;
+                        @include for-size(desktop-sm) {
+                            height: 50vh;
+                        }
+                        .img-overlay {
+                            overflow: hidden;
+                            max-height: 70vh;
+                                @include for-size(desktop-sm) {
+                                    height: 50vh;
+                                }
+                        }
+                        img {
+                            max-width: 100%;
+                            animation: imgzoom forwards 3s ease-in-out;
+                        }
+                        .info, .info-1 {
+                            position: absolute;
+                            top: 30%;
+                            right: -15%;
+                            //transform: translateY(-50%);
+                            width: 25vw;
+                            height: 40vh;
+                            background: rgba(0,0,0,0.7);
+                            padding: 5%;
+                            overflow: hidden;
+                                @include for-size(desktop-sm) {
+                                    top: 0;
+                                    right: 10%;
+                                    width: 30vw;
+                                }
+                                @include for-size(tablet) {
+                                    height: 40%;
+                                }
+                                .overlay {
+                                    position: absolute;
+                                    top: 0;
+                                    left: -102%;
+                                    width: 102%;
+                                    height: 100%;
+                                    background: #FFF;
+                                }
+                                h1, p, a {
+                                    color: #FFF;
+                                    margin-bottom: 10%;
+                                }
+                                h1 {
+                                    @include for-size(tablet) {
+                                        font-size: 3vw;
+                                    }
+                                }
+                                p, a {
+                                    @include for-size(tablet) {
+                                        font-size: 1.5vw;
+                                    }
+                                }
+                                a {
+                                    position: relative;
+                                    transition: all 300ms;
+                                    &:before {
+                                        content: '';
+                                        position: absolute;
+                                        left: -35%;
+                                        top: 50%;
+                                        transform: translateY(-50%);
+                                        height: 1px;
+                                        width: 30px;
+                                        background: #fff;
+                                        transition: all 300ms;
+                                    }
+                                    &:hover {
+                                        text-decoration: none;
+                                        margin-right: 15px;
+                                        transition: all 300ms;
+                                    }
+                                    &:hover:before{
+                                        width: 40px;
+                                        left: -45%;
+                                        transition: all 300ms;
+                                    }
+                                }
+                        }
+                        .info-1 {
+                            left: -17% !important;
+                                @include for-size(desktop-sm) {
+                                    left: 10% !important;
+                                }
+                        }
+                }
+        }
+        .discover {
+            background: #ecf0f1;
+        }
+        .contact {
+            height: 80vh;
+            background: #fff;
+            position: relative;
+            padding-top: 10vh;
+            padding-bottom: 20vh;
+                .hline {
+                    position: absolute;
+                    top: 50%;
+                    left: 0;
+                    width: 100%;
+                    height: 1px;
+                    transform: translateY(-50%);
+                    background: #c3c3c3;
+                }
+                .form {
+                    height: 100%;
+                    background: #ecf0f1;
+                    box-shadow: 0px 4px 25px -2px rgba(0,0,0,0.75);
+                    -webkit-box-shadow: 0px 4px 25px -2px rgba(0,0,0,0.75);
+                    -moz-box-shadow: 0px 4px 25px -2px rgba(0,0,0,0.75);
+                    position: relative;
+                        .wrap {
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            width: 80%;
+                            transform: translate(-50%, -50%);
+                                .form-control {
+                                    border-radius: 0;
+                                    height: 70px;
+                                }
+                                .btn {
+                                    border-radius: 0;
+                                    width: 100%;
+                                }
+                        }
+
+                }
+        }
 }
-
-
+footer {
+    height: 80vh;
+    background: #2c3e50;
+    padding-top: 20vh;
+    position: relative;
+        .row {
+            width: 100%;
+        }
+        .col-xl-3 {
+            min-height: 100%;
+        }
+        h1, h6 {
+            color: #FFF;
+        }
+        p, a {
+            color: #7f8c8d;
+            font-size: .9rem;
+        }
+        a {
+            &:hover {
+                color: #22a6b3;
+            }
+        }
+        .copyright {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 5%;
+        }
+}
 @keyframes animateBg {
     0% {
         transform: scale(1.2);
@@ -145,7 +354,14 @@ main {
         transform: scale(1);
     }
 }
-
+@keyframes animateImg {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
 @keyframes fadeInLeft {
     from {
       opacity: 0;
@@ -166,5 +382,34 @@ main {
     to {
       opacity: 1;
       transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 20px, 0);
+    }
+
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes slideInLeft {
+    from {
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes imgzoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.1);
     }
 }
